# Data-Science

Recommend System/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Recommend System/app/: streamlit_app.py
Recommend System/configs/: absa_model.yaml  crawler.yaml  dashboard.yaml  label_schema.yaml  peer_discovery.yaml  scheduler.yaml  scoring.yaml  severity_lexicon.yaml  source_policy.yaml  text_normalization.yaml
Recommend System/scripts/: add_synthetic_demo_data.py  clear_duckdb_records.py  verify_synthetic_demo_data.py
Recommend System/src/absa_recommender/: __init__.py  absa_inference.py  aggregation.py  api.py  benchmark.py  cli.py  config.py  dedup.py  evaluation.py  explore_jobs.py  io.py  monitoring.py  monthly_pipeline.py  normalize_absa.py  peer_discovery.py  phrase_miner.py  priority.py  ranking.py  recommender.py  review_normalizer.py  scheduler.py  schemas.py  scoring.py  severity.py  storage.py  text_normalizer.py  trend.py
Recommend System/src/absa_recommender/crawler/: __init__.py  monthly.py
Recommend System/src/absa_recommender/sources/: __init__.py  gmaps_url_crawler_single_discovery.py  google_maps_adapter.py  (+2 more)
Recommend System/tests/: test_aggregation.py  test_api.py  test_cli.py  test_config.py  test_crawler_and_absa_adapters.py  test_evaluation.py  test_explore_jobs.py  test_monitoring.py  test_monthly_pipeline.py  test_monthly_pipeline_modules.py  test_normalize_absa.py  test_priority.py  test_scoring.py  test_severity.py  test_storage.py  test_streamlit_app.py  test_text_normalizer.py
(+7 files in other folders)
